marketing-app/resources/platform-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform
spec:
  revisionHistoryLimit: 1
  replicas: 1
  template:
    metadata:
      annotations:
        configmap.reloader.stakater.com/reload: "vcplatform-platform-cm, vcplatform-deployment-cm, vcplatform-platform-secret-configmap"
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/agent-pre-populate-only: "true"
        vault.hashicorp.com/agent-configmap: "vcplatform-platform-secret-configmap"
        vault.hashicorp.com/agent-requests-cpu: "25m"
        vault.hashicorp.com/agent-limits-cpu: "50m" 
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
        - name: vc-platform-web
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            failureThreshold: 50
            successThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 1
          resources:
            limits:
              cpu: "500m"
              memory: 512Mi
            requests:
              cpu: "54m"
          command:
            - "/bin/bash"
            - "-c"
          args: 
            - "source /vault/secrets/config_base && source /vault/secrets/config_custom && dotnet VirtoCommerce.Platform.Web.dll"
      volumes:
      - name: modules-data
        emptyDir: {}
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
