marketing-app/resources/marketing-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: xapi-ingress-https
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:   
      - "$(VC_INSTANCE)-marketing-app.$(VC_NAMESPACE).govirto.com"
      secretName: $(VC_INSTANCE)-marketing-app-$(VC_NAMESPACE)-tls
  rules:
  - host: $(VC_INSTANCE)-marketing-app.$(VC_NAMESPACE).govirto.com
    http:
      paths:
      - backend:
          serviceName: marketing-app
          servicePort: 80
        path: /
